--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 server.port=8080
 server.servlet.context-path=/community
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
+
+
 # DataSourceProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
+spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
 spring.datasource.password=jia0407.
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -18,4 +23,5 @@ mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 #logger
-logging.level.com.nowcode.community=debug
+#logging.level.com.nowcode.community=debug
+#logging.file.path=d://work/data/nowcoder/community.log
