--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 			<version>1.9.21</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.6.6</version>
+		</dependency>
 
     </dependencies>
 
