--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,11 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #logger
 #logging.level.com.nowcode.community=debug
 #logging.file.path=d://work/data/nowcoder/community.log
+
+#MailProperties
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=jason2028983239@sina.com
+spring.mail.password=ce2a4384bd1cb941
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
