生成验证码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ spring.mail.username=jason2028983239@sina.com
 spring.mail.password=ce2a4384bd1cb941
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+# community
+community.path.domain=http://localhost:8080
